ecmascript/parser/tests/test262-error-references/fail/ab9d14c2ef38f180.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/ab9d14c2ef38f180.js:1:8
  |
1 | (0, {a = 0}) = 0
  |        ^

